# tauri-trading

./: .eslintrc.cjs  .gitignore  .prettierignore  index.html  package.json  tsconfig.json  vite.config.ts
electron/: main.ts  preload.ts  preload1.ts
internal/vite-config/: package.json
internal/vite-config/src/plugins/: index.ts
renderer/: node-false.ts
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: base.json  desktop.json
src-tauri/src/: lib.rs  main.rs  tray.rs
src/api/tradingview/: tradingview.ts
src/components/: Greet.vue
src/components/Upload/src/: BasicUpload.vue
src/components/trading_view/datafeed/: datafeed.ts  streaming.ts
src/layouts/default/: index.vue
src/layouts/default/header/: MultipleHeader.vue
src/layouts/default/sider/: LayoutSider.vue
src/layouts/default/titleBar/: TitleBar.vue
src/router/routes/modules/demo/: charting_view.ts
src/settings/: projectSetting.ts
src/views/charting/: ChartingLibrary.vue
