[package]
name = "tauri-trading"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"


[lib]
name = "api_lib"
crate-type = [ "staticlib", "cdylib", "rlib" ]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tiny_http = "0.12"
tauri = { version = "2.0.0-beta.22", features = [ "macos-private-api", "protocol-asset", "devtools",
  "image-ico",
  "image-png",
  "tray-icon"] }
tauri-plugin-shell = "2.0.0-beta.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

log = { version = "0.4.21" }
tauri-plugin-log = "2.0.0-beta.6"
tauri-plugin-fs = "2.0.0-beta.9"
tauri-plugin-clipboard-manager="2.1.0-beta.4"
tauri-plugin-dialog = "2.0.0-beta.9"
tauri-plugin-http  = "2.0.0-beta.9"
tauri-plugin-notification="2.0.0-beta.7"
tauri-plugin-os="2.0.0-beta.6"
tauri-plugin-process="2.0.0-beta.6"


[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
tauri-plugin-cli = { version = "2.0.0-beta.6" }
tauri-plugin-global-shortcut = { version = "2.0.0-beta.6" }
tauri-plugin-updater = {  version = "2.0.0-beta.7" }

[target."cfg(any(target_os = \"android\", target_os = \"ios\"))".dependencies]
tauri-plugin-barcode-scanner = { version = "2.0.0-beta.7" }
tauri-plugin-nfc = {  version = "2.0.0-beta.6" }
tauri-plugin-biometric = { version = "2.0.0-beta.6" }

[target."cfg(target_os = \"windows\")".dependencies]
window-shadows = "0.2"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.25"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-autostart = "2.0.0-beta.7"
[features]
prod = [ "tauri/custom-protocol" ]
